[package]
name = "lie"
version = "0.1.0"
authors = ["JP-Ellis <josh@jpellis.me>"]

readme = "README.md"
description = """
Library to manipulate Lie algebras and their representations.
"""

documentation = "https://github.com/hep-rs/lie"
homepage = "https://github.com/hep-rs/lie"
repository  = "https://github.com/hep-rs/lie"

license = "GPL-3.0"

[dependencies]
ndarray = "^0.10"
num = "^0.1.40"
rayon = "^0.8.2"

[features]

default = []
nightly = []