[package]
name = "lie"
version = "0.1.0"
authors = ["JP-Ellis <josh@jpellis.me>"]

readme = "README.md"
description = """
Library to manipulate Lie algebras and their representations.
"""

documentation = "https://github.com/hep-rs/lie"
homepage = "https://github.com/hep-rs/lie"
repository  = "https://github.com/hep-rs/lie"

license = "GPL-3.0"

edition = "2018"

[dependencies]
ndarray = "0.12.1"
rayon = "1.0.3"

[features]

default = []
nightly = []
